# fabric-mcp-docker

./: Dockerfile  LICENSE  README.md  compose.yaml  docker-compose.yaml  docker-compose.yml
fabric-config/: unique_patterns.txt
fabric-config/contexts/: explain_this  web-optimizer
fabric-config/patterns/analyze_xml/: system.md
fabric-config/patterns/chem_problems/: system.md
fabric-config/patterns/diff_applications/: system.md
fabric-config/patterns/extract_latex/: system.md
fabric-config/patterns/improve_clarity/: system.md
fabric-config/patterns/improve_search_terms/: system.md
fabric-config/patterns/reduce_jargon/: system.md
fabric-config/patterns/special_relativity/: system.md
fabric-config/patterns/stem_solutions/: system.md
fabric-config/patterns/writing_mistakes/: system.md
fabric-mcp/: .gitignore  LICENSE  pyproject.toml
fabric-mcp-repo/: Makefile  README.md  cspell.json
fabric-mcp-repo/.trunk/: trunk.yaml
fabric-mcp-repo/docker/: .Dockerfile.swp  Dockerfile
fabric-mcp-repo/src/fabric_mcp/: __about__.py  __init__.py  api_client.py  constants.py  fabric_tools.py  models.py
fabric-mcp-repo/tests/integration/: test_mcp_integration.py  test_transport_integration.py
fabric-mcp-repo/tests/scripts/: check_shared_utils
fabric-mcp-repo/tests/shared/: __init__.py  fabric_api_mocks.py  mocking_utils.py  port_utils.py  transport_test_utils.py
fabric-mcp-repo/tests/shared/fabric_api/: README.md  __init__.py  base.py  server.py  utils.py
fabric-mcp-repo/tests/unit/: test_api_client.py  test_cli_additional.py  test_config.py  test_core.py  test_core_coverage.py  test_fabric_get_pattern_details.py  test_fabric_list_patterns.py  test_fabric_list_strategies.py  test_fabric_run_pattern_advanced.py  test_fabric_run_pattern_base.py  test_fabric_run_pattern_basic.py  test_fabric_run_pattern_error_handling.py  test_fabric_run_pattern_streaming.py  test_fabric_run_pattern_validation.py  test_server_stdio.py  test_utils.py
fabric-mcp/docker/: Dockerfile
fabric-mcp/src/fabric_mcp/: cli.py  config.py  core.py  server_stdio.py  sse_parser.py  utils.py  validation.py
stdio/: docker-compose.yml  mcp.json
